--- a/Dockerfile.prod
+++ b/Dockerfile.prod
@@ -1,5 +1,6 @@
 FROM ruby:2.5
-RUN apt-get update && apt-get install -y \
+RUN apt-get update
+RUN apt-get install -y \
     build-essential \
     libpq-dev \
     nodejs \
@@ -9,6 +10,5 @@ RUN apt-get update && apt-get install -y \
 WORKDIR /product-register
 COPY Gemfile Gemfile.lock /product-register/
 RUN bundle install
-
 COPY . .
 CMD ["rails", "s"]
